@@ -1,3 +1,7 @@
+= HEAD
+
+* Allow r.multi_run to take a block that is called with the prefix before dispatching to the rack app (mikz) (#32)
+
 = 2.4.0 (2015-06-15)
 
 * Add websockets plugin, for integration with faye-websocket (jeremyevans)
